<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_margin="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintTop_toTopOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like_button"
        android:src="@drawable/ic_like_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/likesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:layout_marginStart="@dimen/in_group_spacing"
        app:layout_constraintStart_toEndOf="@id/likeButton"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="@sample/posts.json/data/likes" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_share_button"
        android:src="@drawable/baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/likesAmount"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/sharesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:layout_marginStart="@dimen/in_group_spacing"
        app:layout_constraintStart_toEndOf="@id/shareButton"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="@sample/posts.json/data/shares" />

    <TextView
        android:id="@+id/viewsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="@sample/posts.json/data/views" />

    <ImageButton
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/in_group_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_view_button"
        android:src="@drawable/baseline_remove_red_eye_24"
        app:layout_constraintEnd_toStartOf="@id/viewsAmount"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


</androidx.constraintlayout.widget.ConstraintLayout>
